@@ -1,4 +1,14 @@
-﻿zg 22.04.2015 21:33:27 +0200 - build 510
+﻿shmuel 02.05.2015 19:57:59 +0200 - build 511
+
+1. LuaFAR (generic plugin):
+   - Параметр ENV_PREFIX ликвидирован. Переменные окружения при инициализации плагина теперь
+     игнорируются, за исключением %FARPROFILE%.
+   - Перед первой загрузкой стартового Lua-файла плагина производится исполнение скрипта
+     "%FARPROFILE%\luafar_init.lua", если таковой имеется.
+     - Скрипт исполняется также при перезагрузках, вызванных исполнением _G.RecreateLuaState = true.
+     - Скрипт не исполняется при перезагрузках, вызванных установкой far.ReloadDefaultScript = true.
+
+zg 22.04.2015 21:33:27 +0200 - build 510
 
 1. Far 3.0 API 4353.
 
